# FluxSync

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/flux-sdk/: Cargo.toml
crates/flux-sdk/src/: lib.rs  models.rs
extension/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
extension/src/: extension.ts  hasher.ts  types.ts  watcher.ts
extension/src/test/: extension.test.ts  runTests.ts  suite.ts
proto/: schema.json
